# ktabelo

./: .gitignore  CMakeLists.txt  README.md
src/: ktabelo_ui.rc  main.cpp  main_window.cpp  main_window.h  main_window_area.cpp  main_window_area.h  main_window_child.cpp  main_window_child.h  main_window_document.cpp  main_window_document.h  mdi_area.cpp  mdi_area.h  mdi_document.cpp  mdi_document.h  tabelo_ui.rc  tabular_document.cpp  tabular_document.h  window.cpp  window.h
